[gd_scene load_steps=3 format=3 uid="uid://bmbri0r286cpb"]

[ext_resource type="Script" path="res://scenes/score_board.gd" id="1_eai3q"]
[ext_resource type="FontFile" uid="uid://bf0pe3farcj0h" path="res://fonts/pixelcyr_normal.ttf" id="2_obdoe"]

[node name="Score_board" type="Node2D"]
script = ExtResource("1_eai3q")

[node name="Button" type="Button" parent="."]
offset_left = 256.0
offset_top = 400.0
offset_right = 384.0
offset_bottom = 432.0
theme_override_fonts/font = ExtResource("2_obdoe")
theme_override_font_sizes/font_size = 18
text = "back
"

[node name="Label3" type="Label" parent="."]
offset_left = 208.0
offset_top = 280.0
offset_right = 432.0
offset_bottom = 312.0
theme_override_fonts/font = ExtResource("2_obdoe")
theme_override_font_sizes/font_size = 24
text = "score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 208.0
offset_top = 248.0
offset_right = 432.0
offset_bottom = 276.0
theme_override_fonts/font = ExtResource("2_obdoe")
theme_override_font_sizes/font_size = 24
text = "tower health: 00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 128.0
offset_top = 128.0
offset_right = 512.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("2_obdoe")
theme_override_font_sizes/font_size = 72
text = "YOU WON!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
